# aleo-utils-go

./: .gitignore  Cargo.toml  README.md  aleo_utils.wasm  build.sh  example_test.go  go.mod  go.sum  optimize_wasm.sh  session.go  signer_test.go  wrapper.go
cmd/sgx/: go.mod  go.sum  sgx.go
src/: format.rs  hash.rs  key.rs  lib.rs  log.rs  memory.rs  network.rs  sign.rs
