[package]
name = "aleo-utils"
version = "1.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
snarkvm-console = { git = "https://github.com/AleoNet/snarkVM", branch = "mainnet", package = "snarkvm-console", features = [ "wasm" ] }
rand = "0.8.5"
getrandom = { version = "0.2.11", features = [ "js" ] }
hex = "0.4.3"
indexmap = "2.0.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Enable Link Time Optimizations
lto = true

[profile.dev]
opt-level = "s"
lto = true
incremental = false
